# C

./: .gitignore  CMakeLists.txt  README.md  main.c  main.cpp  themind.h  themind.hpp
